--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
@@ -25,9 +26,11 @@
     "react-window": "^1.8.6",
     "redux": "4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.52.1",
     "styled-components": "^5.3.5",
     "validate.js": "^0.13.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
