--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.52.1",
     "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2",
     "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
