--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL = https://random-chat-api-server.herokuapp.com
+<!-- REACT_APP_API_URL = https://random-chat-api-server.herokuapp.com -->
+
+REACT_APP_API_URL = http://localhost:3000
