--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autosuggest-highlight": "^3.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-geocode": "^0.2.3",
+    "react-geolocated": "^4.0.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.1",
