--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "chat-random-client-fe",
-  "proxy": "https://random-chat-api-server.herokuapp.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,9 +21,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "actioncable": "^5.2.8",
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
     "react": "^18.1.0",
@@ -53,7 +54,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:prod": "env-cmd -f .env.production npm run-script build",
+    "start:dev:fe": "env-cmd -f .env.development.fe npm run-script start",
+    "start:dev:be": "PORT=3001 env-cmd -f .env.development.be npm run-script start"
   },
   "eslintConfig": {
     "extends": [
