--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = https://random-chat-api-server.herokuapp.com
+<!-- REACT_APP_API_URL = http://sub.cherishbychating.com:8082 -->
 
-<!-- REACT_APP_API_URL = http://localhost:3000 -->
+REACT_APP_API_URL = http://localhost:3000
