--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = 'http://sub.cherishbychating.com/api'
+REACT_APP_API_URL = 'http://sub.cherishbychating.com:8082/api'
 API_SERVER_URL = 'https://random-chat-api-server.herokuapp.com'
 SOCKET_URL = 'ws://random-chat-api-server.herokuapp.com/cable'
