add proxy config for API for nginx

--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,10 @@ server {
         try_files $uri $uri/ @rewrites;
     }
 
+    location /api/ {
+       proxy_pass https://random-chat-api-server.herokuapp.com/;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
