--- a/default.conf
+++ b/default.conf
@@ -15,6 +15,14 @@ server {
        proxy_pass https://random-chat-api-server.herokuapp.com/;
     }
 
+    location /cable/ {
+        proxy_pass ws://random-chat-api-server.herokuapp.com/cable;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
