--- a/.env.development.fe
+++ b/.env.development.fe
@@ -1,3 +1,3 @@
 REACT_APP_API_URL = 'http://localhost:3000/api'
 REACT_APP_API_HOST_URL = 'https://random-chat-api-server.herokuapp.com'
-REACT_APP_SOCKET_URL = 'ws://random-chat-api-server.herokuapp.com/cable'
+REACT_APP_SOCKET_URL = 'wss://random-chat-api-server.herokuapp.com/cable'
