--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_API_URL = 'http://sub.cherishbychating.com/api'
+REACT_APP_API_URL = 'http://sub.cherishbychating.com:8082/api'
 REACT_APP_API_HOST_URL = 'https://random-chat-api-server.herokuapp.com'
-REACT_APP_SOCKET_URL = 'ws://random-chat-api-server.herokuapp.com/cable'
+REACT_APP_SOCKET_URL = 'wss://random-chat-api-server.herokuapp.com/cable'
