--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@date-io/dayjs": "^2.14.0",
     "@date-io/luxon": "^2.14.0",
     "@date-io/moment": "^2.14.0",
+    "emoji-mart": "^3.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@iconify/react": "^3.2.2",
     "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.7.0",
@@ -50,7 +52,9 @@
     "sweetalert": "^2.1.2",
     "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "simplebar-react": "^2.3.6",
+    "react-image-lightbox": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
