change authorize permiss

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@date-io/dayjs": "^2.14.0",
     "@date-io/luxon": "^2.14.0",
     "@date-io/moment": "^2.14.0",
-    "emoji-mart": "^3.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@iconify/react": "^3.2.2",
@@ -27,6 +26,7 @@
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.28.0",
+    "emoji-mart": "^3.0.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "moment": "^2.29.3",
@@ -37,6 +37,7 @@
     "react-geolocated": "^4.0.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-image-lightbox": "^5.1.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -48,13 +49,12 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.52.1",
     "save": "^2.5.0",
+    "simplebar-react": "^2.3.6",
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
     "validate.js": "^0.13.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11",
-    "simplebar-react": "^2.3.6",
-    "react-image-lightbox": "^5.1.4"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
