--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "emoji-mart": "^3.0.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
+    "jquery": "^3.6.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
