--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react-geolocated": "^4.0.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-image-crop": "^10.0.4",
     "react-image-lightbox": "^5.1.4",
+    "react-modal": "^3.15.1",
+    "react-mui-fileuploader": "^0.2.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
