--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery": "^3.6.0",
     "lodash.debounce": "@^4.0.8",
     "moment": "^2.29.3",
+    "notistack": "^2.0.5",
     "react": "^18.1.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
