--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "env-cmd": "^10.1.0",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
-    "lodash.debounce": "@^4.0.8",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "notistack": "^2.0.5",
     "react": "^18.1.0",
