--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "autosuggest-highlight": "^3.2.1",
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.6.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "emoji-mart": "^3.0.0",
