--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-geolocated": "^4.0.3",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.4.0",
     "react-image-crop": "8.6.4",
     "react-image-lightbox": "^5.1.4",
     "react-input-emoji": "^4.1.0",
