--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-spinners": "^0.12.0",
+    "react-swipeable-views": "^0.14.0",
     "react-toast-notifications": "^2.5.1",
     "react-trello": "^2.2.11",
     "react-window": "^1.8.7",
