--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "namor": "^2.0.4",
     "notistack": "^2.0.5",
     "npm": "^8.14.0",
+    "popper.js": "^1.16.1",
     "rc-tooltip": "^5.2.1",
     "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
