add page admin dashboard

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^0.27.2",
     "axios-mock-adapter": "^1.21.1",
     "bootstrap": "4.6.0",
+    "cdbreact": "^1.5.3",
+    "chart.js": "^3.9.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.28.0",
     "emoji-mart": "^3.0.0",
@@ -46,6 +48,7 @@
     "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "1.6.1",
+    "react-chartjs-2": "^4.3.1",
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datetime": "^3.1.1",
