--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "1.6.1",
     "react-chartjs-2": "^4.3.1",
+    "react-confirm-box": "^1.2.0",
     "react-cookie": "^4.1.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-datetime": "^3.1.1",
